@@ -100,6 +100,7 @@
         </menu>
     </item>
 
+    <!--
     <item android:id="@+id/social"
         android:title="@string/menu_social">
         <menu>
@@ -113,4 +114,5 @@
                 android:title="@string/menu_kidc" />
         </menu>
     </item>
+    -->
 </menu>
