@@ -253,16 +253,16 @@
     <string name="abs__activity_chooser_view_see_all">See all...</string>
 
     <!-- Strings for the ShowcaseView tutorial. -->
-    <string name="tutorial_1_title">Welcome to {boQwI\'}!</string>
-    <string name="tutorial_1_msg">Message 1</string>
-    <string name="tutorial_2_title">Title 2</string>
-    <string name="tutorial_2_msg">Message 2</string>
-    <string name="tutorial_3_title">Title 3</string>
-    <string name="tutorial_3_msg">Message 3</string>
-    <string name="tutorial_4_title">Title 4</string>
-    <string name="tutorial_4_msg">Message 4</string>
-    <string name="tutorial_5_title">Title 5</string>
-    <string name="tutorial_5_msg">Message 5</string>
-    <string name="tutorial_6_title">Title 6</string>
-    <string name="tutorial_6_msg">Message 6</string>
+    <string name="tutorial_1_title">qavan! (I salute you!)</string>
+    <string name="tutorial_1_msg">This quick tutorial gives a brief overview of this app.</string>
+    <string name="tutorial_2_title">Search</string>
+    <string name="tutorial_2_msg">Tap here to search the database. You can search using Klingon or English.</string>
+    <string name="tutorial_3_title">Resources</string>
+    <string name="tutorial_3_msg">Tap here (or swipe right) to open the resources menu. Here, you\'ll find helpful charts, useful phrases, and links to media.</string>
+    <string name="tutorial_4_title">Social</string>
+    <string name="tutorial_4_msg">Interact with other Klingon learners and speakers on the Google+ Klingon language community.</string>
+    <string name="tutorial_5_title">Other features</string>
+    <string name="tutorial_5_msg">Do you have something you want translated which isn\'t in the database? Make a request to the Klingon Teacher.\n\nLike a Klingon word or phrase? Share it with your friends.\n\nReading a long text in Klingon? Activate float mode, and this app will hover over your browser or email app.</string>
+    <string name="tutorial_6_title">Success!</string>
+    <string name="tutorial_6_msg">Qapla\'!</string>
 </resources>
